# netfl

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py  task.py
.github/workflows/: ci.yml  pypi.yml  release.yml
examples/cifar10/: experiment.py  task.py
examples/mnist/: experiment.py  task.py
examples/tasks/: cifar10.py  mnist.py
experiments/: README.md  result_calculator.py
experiments/1.1.1/: experiment.py  task.py
experiments/1.1.2/: experiment.py  task.py
experiments/1.1.3/: experiment.py
experiments/1.1.4/: experiment.py  task.py
experiments/1.2.1/: experiment.py  task.py
experiments/1.2.2/: experiment.py
experiments/2.1.1/: experiment.py  task.py
experiments/2.1.2/: experiment.py  task.py
experiments/2.1.3/: experiment.py  task.py
experiments/2.1.4/: experiment.py  task.py
experiments/2.2.1/: experiment.py  task.py
experiments/2.2.2/: experiment.py  task.py
experiments/2.2.3/: experiment.py
experiments/3.1.1/: experiment.py  task.py
experiments/3.1.2/: experiment.py  task.py
experiments/3.1.3/: experiment.py
experiments/3.2.1/: experiment.py  task.py
experiments/3.2.2/: experiment.py  task.py
experiments/3.2.3/: experiment.py  task.py
experiments/3.2.4/: experiment.py  task.py
experiments/3.3.1/: experiment.py  task.py
experiments/3.3.2/: experiment.py  task.py
experiments/3.3.3/: experiment.py  task.py
experiments/3.3.4/: experiment.py  task.py
experiments/results/: README.md
fogfl/core/: client.py  server.py  task.py
fogfl/infra/: experiment.py
netfl/: __init__.py
(+34 files in other folders)
