[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fogfl"
version = "1.0.0"
description = "FogFL is a plugin that extends Fogbed by integrating the Flower framework, enabling the execution of Federated Learning experiments in Fog/Edge environments. This integration allows seamless deployment and management of distributed machine learning tasks across edge and fog nodes, enhancing the capabilities of Fogbed for federated learning simulations."
license = "Apache-2.0"
dependencies = [
    "flwr==1.12.0",
    "flwr-datasets[vision]==0.5.0",
    "tensorflow==2.16.1",
    "fogbed==1.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["."]
